Fix overflow-x (#44)

--- a/www/style.css
+++ b/www/style.css
@@ -218,13 +218,6 @@ main article h1:first-child {
   padding-top: 0;
 }
 
-main article iframe {
-  display: block;
-  margin: 0 auto;
-  max-width: 560px;
-  width: 100%;
-}
-
 main article .pl-year {
   border-color: var(--background-color-alt);
   border-style: solid;
